results/experiments/11_90_incorrect/1468/2026-04-29_08-09-55/selection/batfish/candidate_2_vs_candidate_3_reachability.txt
--- Analyzing results/experiments/2026-04-29_06-59-06/1468/2026-04-29_08-09-55/candidates: candidate_2 vs candidate_3 ---

[DIFFERENCE DETECTED]
Counter-example Packet (Packet P): start=athens [10.0.0.13->100.0.0.0 ICMP (type=8, code=0)]

Trace in Candidate 1 (Permitted):
[((ORIGINATED(default), NO_ROUTE(Discarded)))]

Trace in Candidate 2 (Denied/Different):
[((ORIGINATED(default), FORWARDED(Forwarded out interface: FastEthernet1/0 with resolved next-hop IP: 10.0.0.27, Routes: [ospfE2 (Network: 100.0.0.0/24, Next Hop: interface FastEthernet1/0 ip 10.0.0.27)]), TRANSMITTED(FastEthernet1/0)), (RECEIVED(FastEthernet0/1), FORWARDED(Forwarded out interface: FastEthernet1/0 with resolved next-hop IP: 10.0.0.62, Routes: [ospfE2 (Network: 100.0.0.0/24, Next Hop: interface FastEthernet1/0 ip 10.0.0.62)]), TRANSMITTED(FastEthernet1/0)), (RECEIVED(FastEthernet [...]
